# ale1

./: README.md  app.py  pyproject.toml  requirements.txt  web_app.py
outputs/: 20250720_083600_pdf_texto.txt  20250720_083849_med_1-53_texto.txt  20250720_083905_pocket-medicine_-the-massachusetts-general-hospital-handbook-of-internal-medicine.pdf_texto.txt  20250720_084435_Historia_de_Dor_e_Tratamento_O_Desafio_da_Estenose_Espinhal_texto.txt  20250720_084834_resumo-artigo_8_texto.txt  20250720_092231_MCA_100-11_texto.txt  prompt_gemini_20250720_083915.txt  prompt_gemini_critico_20250720_090211.txt  prompt_gemini_estruturado_20250720_092227.txt  prompt_gemini_indicativo_20250720_084735.txt  prompt_gemini_indicativo_20250720_092028.txt  prompt_gemini_informativo_20250720_084838.txt  prompt_gemini_informativo_20250721_105451.txt
templates/: base.html  index.html  resultado.html
