[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftotext-extractor"
version = "1.0.0"
description = "Aplicação web para extração de texto de arquivos PDF com geração de resumos via Google Gemini"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Seu Nome", email = "seu.email@exemplo.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing",
]
keywords = ["pdf", "text-extraction", "flask", "web-app", "gemini"]

dependencies = [
    "Flask>=3.0.0",
    "PyMuPDF>=1.23.0",
    "Werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/seuusuario/pdftotext-extractor"
Repository = "https://github.com/seuusuario/pdftotext-extractor"
Issues = "https://github.com/seuusuario/pdftotext-extractor/issues"

[project.scripts]
pdftotext-web = "web_app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]